--- a/portfolio.html
+++ b/portfolio.html
@@ -6,8 +6,9 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <title>Portfolio HTML</title>
 </head>
-
 <body>
- 
+    <nav class="navbar navbar-dark bg-dark">
+        <a class="navbar-brand">Portfolio</a>
+      </nav>
 </body>
 </html>
