--- a/contacts.html
+++ b/contacts.html
@@ -6,9 +6,15 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <title>Contact HTML</title>
 </head>
-<body>
+<body class="bg-secondary">
     <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand">Contacts</a>
-      </nav> 
+        <div class="collapse navbar-collapse"></div>
+         <a class="navbar-brand"><h3>Contacts</h3></a>
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="index.html">About</a></li>
+              <li><a href="contacts.html">Contacts</a></li>
+              <li><a href="portfolio.html">Portfolio</a></li>
+            </ul>
+    </nav> 
 </body>
 </html>
