--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 <body class="bg-secondary">
     <nav class="navbar navbar-dark bg-dark">
         <div class="collapse navbar-collapse"></div>
-         <a class="navbar-brand">Portfolio</a>
+         <a class="navbar-brand"><h3>Portfolio</h3></a>
             <ul class="nav navbar-nav">
               <li class="active"><a href="index.html">About</a></li>
               <li><a href="contacts.html">Contacts</a></li>
