--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
               <li><a href="portfolio.html">Portfolio</a></li>
             </ul>
     </nav>
+    <div class="container">
+        
+    </div>
 </body>
 </html>
