--- a/portfolio.html
+++ b/portfolio.html
@@ -16,5 +16,28 @@
               <li><a href="portfolio.html">Portfolio</a></li>
             </ul>
     </nav>
+    <br><br>
+    <div class="container row justify-content-center">
+        <div class="card">
+        <div class="card" style="width: 18rem;">
+            <a href="#" class="btn btn-primary">Project 1</a>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <a href="#" class="btn btn-primary">Project 2</a>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <a href="#" class="btn btn-primary">Project 3</a>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <a href="#" class="btn btn-primary">Project 4</a>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <a href="#" class="btn btn-primary">Project 5</a>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <a href="#" class="btn btn-primary">Project 6</a>
+        </div>
+        </div>
+    </div>
 </body>
 </html>
