Fixed contacts hrml

--- a/contacts.html
+++ b/contacts.html
@@ -16,8 +16,18 @@
               <li><a href="portfolio.html">Portfolio</a></li>
             </ul>
     </nav> 
-    <div class="container">
-        
+    <br><br>
+    <div class="container row justify-content-center">
+        <div class="card bg-dark">
+            <form>
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="First & Last Name">
+                    <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Message:" rows="3"></textarea>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+            </form>
+        </div>
     </div>
 </body>
 </html>
