--- a/index.html
+++ b/index.html
@@ -16,8 +16,16 @@
               <li><a href="portfolio.html">Portfolio</a></li>
             </ul>
     </nav>
-    <div class="container">
-        
+    <br><br>
+    <div class="container bg-light">
+        <div class="row">
+            <div class="col-9 text-center"><h5>Claudia Mendez</h5></div>
+            <div class="col-4">
+                <figure>
+                <img src="img/IMG_1361.jpg" class="rounded mx-auto d-block figure-img img-fluid" style="height: 200px; width: 50%;" alt=""></figure>
+            </div>
+            <div class="col-6">The Emperor’s ruthless Order 66 has all but exterminated the Jedi. The few remaining who still wield the Force for good have been driven into exile or hiding. But not Jax Pavan, who’s been steadily striking blows against the Empire—as a lone guerrilla fighter and a valued partner of Whiplash, a secret Coruscant-based resistance group. Now he’s taking on his most critical mission: transporting a valued Whiplash leader, targeted for assassination, from Coruscant to safety on a distant world. It’s a risky move under any circumstances, but Jax and his trusted crew aboard the Far Ranger, including the irrepressible droid I-Five, are prepared to pit their combat skills and their vessel’s firepower against all Imperial threats—except the one Jax fears most. Reports have raced across the galaxy that the dark lord of the Sith has fallen in a duel to the death with a Rebel freedom fighter. But Jax discovers the chilling truth when he reaches out with the Force . . . only to touch the dark, unmistakable, and malignantly alive presence that is Darth Vader. And Jax knows that Vader will stop at nothing until the last Jedi has fallen.</div>
+          </div>   
     </div>
 </body>
 </html>
